Updated the concepts page Added Hibernate and JDBC Caching pages to the HTML User Guide Made images have a max-width of 650px to fix overflow issue Changed menu names of Hibernate and JDBC to include the word "Caching"
git-svn-id: http://svn.terracotta.org/svn/ehcache@2193 b9324663-ca0f-0410-8574-be9b3887307d

--- a/trunk/core/src/site/resources/css/siteNew.css
+++ b/trunk/core/src/site/resources/css/siteNew.css
@@ -1,3 +1,7 @@
+img {
+  max-width: 650px;
+}
+
 body {
 background: #eeece6;
 margin: 0;
